# OpenAI-Hack

./: .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  compose.yaml  pyproject.toml  rules.md
.github/workflows/: azure-iac.yml  azure-public-demo.yml  ci.yml
docs/: ASSURANCE_OPERATIONS_RUNBOOK.md  AZURE_MULTITENANT_PRODUCTION_PLAN.md  AZURE_MULTITENANT_WATERFALL_EXECUTION_PLAN.md  AZURE_OIDC_DEPLOYMENT_RUNBOOK.md  COMPETITIVE_POSITIONING_ADDENDUM_2026-07-18.md  DEEP_RESEARCH_MEMO_2026-07-18.md  DEMO.md  FULL_PRODUCT_SCOPE.md  IMPLEMENTATION_PLAN_CHANGE_CONTROL.md  LOCAL_RELEASE_READINESS_2026-07-19.md  MULTICA_COMPARISON_2026-07-18.md  MULTICA_FIXTURE_ADAPTER_OPERATIONS.md  MULTICA_INTEGRATION_WATERFALL_PLAN.md  PUBLIC_DEMO_DEPLOYMENT.md  SAFETY_OPERATIONS_DASHBOARD_PLAN.md  UI_UX_WATERFALL_DELIVERY.md  WATERFALL_MASTER_PLAN.md
eval/: __init__.py  run.py  scenarios.yaml
infra/: README.md  main.bicep
interlock/: __init__.py  agent.py  intent.py  interceptor.py  tracing.py
interlock/api/: __init__.py  eventlog.py  main.py
interlock/assurance/: __init__.py  baseline.py  capture.py  check.py  cli.py  delta.py  effects.py  evidence.py  metrics.py  models.py  multica_adapter.py  normalization.py  replay.py  skill_admission.py  staging_transport.py  store.py  tenancy.py  tenant_authorization.py  tenant_evidence.py  (+5 more)
scripts/: seed_demo.sh
tests/: test_agent_smoke.py  test_azure_workflow_contract.py  test_dashboard_contract.py  test_e2e_local.py  test_intent.py  test_interceptor.py  test_tracing.py
web/: package-lock.json  package.json
(+59 files in other folders)
