[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "interlock"
version = "0.1.0"
description = "Deterministic circuit breaker for autonomous agent tool actions"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115,<1",
    "openai-agents>=0.2,<1",
    "langfuse>=4,<5",
    "pydantic>=2.10,<3",
    "pyyaml>=6,<7",
    "uvicorn>=0.30,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.setuptools.packages.find]
include = ["interlock*"]
